add fonts and colors

--- a/style.scss
+++ b/style.scss
@@ -18,7 +18,8 @@ Twenty Twenty-Two is distributed under the terms of the GNU GPL.
 */
 
 //FONTS
-@import url("https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@400;700&display=swap");
+@import url("https://use.typekit.net/tdy5zuz.css");
+@import url("https://fonts.googleapis.com/css2?family=EB+Garamond&display=swap");
 
 /*
  * Font smoothing.
