--- a/style.scss
+++ b/style.scss
@@ -166,13 +166,16 @@ body > .is-root-container > .wp-block-template-part > .wp-block-cover,
 .wp-block-columns.partner-org{
   &--beth-el{
     .wp-block-column h4.partner-org--title{
-      padding: 1rem 1rem 1rem 2rem !important;
+      padding: 1rem 1rem 1rem 2rem;
       margin: 1rem 0 0 -2rem;
+      line-height:.9;
     }
   }
   &--simons{
     .wp-block-column h4.partner-org--title{
-    padding: 1rem 1rem 1rem 1rem !important;
-    margin: 1rem -2rem 0 0;}
+    padding: 1rem 1rem 1rem 1rem;
+    margin: 1rem -2rem 0 0;
+    line-height:.9;
+    }
   }
 }
