--- a/style.css
+++ b/style.css
@@ -154,6 +154,10 @@ body > .is-root-container > .wp-block-template-part > .wp-block-cover,
   margin-top: 0 !important;
 }
 
+.wp-block-group.splash--title {
+  background: rgba(43, 57, 144, 0.75);
+}
+
 .wp-block-columns.partner-org--beth-el .wp-block-column h4.partner-org--title {
   padding: 1rem 1rem 1rem 2rem;
   margin: 1rem 0 0 -2rem;
