and make it important!

--- a/style.scss
+++ b/style.scss
@@ -164,7 +164,7 @@ body > .is-root-container > .wp-block-template-part > .wp-block-cover,
 }
 
 .wp-block-group.splash--title{
-  background:rgba(43, 57, 144, .75);
+  background-color:rgba(43, 57, 144, .75) !important;
 }
 
 .wp-block-columns.partner-org{
