--- a/style.css
+++ b/style.css
@@ -161,12 +161,12 @@ body > .is-root-container > .wp-block-template-part > .wp-block-cover,
 .wp-block-columns.partner-org--beth-el .wp-block-column h4.partner-org--title {
   padding: 1rem 1rem 1rem 2rem;
   margin: 1rem 0 0 -2rem;
-  line-height: .9;
+  line-height: 0.9;
 }
 
 .wp-block-columns.partner-org--simons .wp-block-column h4.partner-org--title {
   padding: 1rem 1rem 1rem 1rem;
   margin: 1rem -2rem 0 0;
-  line-height: .9;
+  line-height: 0.9;
 }
 /*# sourceMappingURL=style.css.map */
