--- a/style.scss
+++ b/style.scss
@@ -183,3 +183,8 @@ body > .is-root-container > .wp-block-template-part > .wp-block-cover,
     }
   }
 }
+
+.bottom-gallery{
+  padding:0;
+  margin:0;
+}
