--- a/style.css
+++ b/style.css
@@ -171,7 +171,6 @@ body > .is-root-container > .wp-block-template-part > .wp-block-cover,
 }
 
 .bottom-gallery {
-  padding: 0;
-  margin: 0;
+  margin-top: 0;
 }
 /*# sourceMappingURL=style.css.map */
