--- a/style.css
+++ b/style.css
@@ -171,6 +171,6 @@ body > .is-root-container > .wp-block-template-part > .wp-block-cover,
 }
 
 .bottom-gallery {
-  margin-top: 0;
+  margin-top: 0 !important;
 }
 /*# sourceMappingURL=style.css.map */
