--- a/style.scss
+++ b/style.scss
@@ -185,5 +185,5 @@ body > .is-root-container > .wp-block-template-part > .wp-block-cover,
 }
 
 .bottom-gallery{
-  margin-top:0;
+  margin-top:0 !important;
 }
