--- a/style.css
+++ b/style.css
@@ -174,7 +174,7 @@ body > .is-root-container > .wp-block-template-part > .wp-block-cover,
   margin-top: 0 !important;
 }
 
-.wp-block-navigation__container:last-child(.wp-block-navigation-item) a.wp-block-navigation-item__content {
+.wp-block-navigation__container .wp-block-navigation-item:last-child a.wp-block-navigation-item__content {
   background-color: #FF9300;
   height: 100%;
   padding: .8rem 1rem;
