--- a/style.css
+++ b/style.css
@@ -186,4 +186,35 @@ body > .is-root-container > .wp-block-template-part > .wp-block-cover,
 label {
   font-family: "bicyclette", sans-serif;
 }
+
+#gform-2 {
+  font-family: bicyclette;
+}
+
+#gform-2 .gform_body.gform-body .gform_page .gform_page_fields .gfield.gfield_price .ginput_container.ginput_container_radio .gfield_radio {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 1fr 1fr 1fr;
+      grid-template-columns: 1fr 1fr 1fr;
+}
+
+#gform-2 .gform_body.gform-body .gform_page .gform_page_fields .gfield.gfield_price .ginput_container.ginput_container_radio .gfield_radio div {
+  padding: 0.5rem 1rem;
+  border: 2px solid var(--wp--preset--color--primary);
+  margin: 0.5rem;
+}
+
+#gform-2 .gform_body.gform-body .gform_page .gform_page_fields .gfield.gfield_price .ginput_container.ginput_container_radio .gfield_radio div .gfield-choice-input {
+  display: none;
+}
+
+#gform-2 .gform_body.gform-body .gform_page .gform_page_fields .gfield.gfield_price .ginput_container.ginput_container_radio .gfield_radio div .label {
+  width: 100%;
+  height: 100%;
+}
+
+#gform-2 .gform_body.gform-body .gform_page .gform_page_fields .gfield.gfield_price .ginput_container.ginput_container_radio .gfield_radio div .label:hover {
+  color: #fff;
+  background-color: var(--wp--preset--color--primary);
+}
 /*# sourceMappingURL=style.css.map */
