--- a/style.scss
+++ b/style.scss
@@ -205,7 +205,7 @@ label {
   font-family: "bicyclette", sans-serif;
 }
 
-#gform-2 {
+#gform_2 {
   font-family: bicyclette;
   .gform_body.gform-body .gform_page .gform_page_fields .gfield.gfield_price {
     .ginput_container.ginput_container_radio .gfield_radio {
