test just the font first...

--- a/style.css
+++ b/style.css
@@ -188,7 +188,7 @@ label {
 }
 
 #gform_2 {
-  font-family: bicyclette;
+  font-family: "bicyclette", sans-serif;
 }
 
 #gform_2 .gform_body.gform-body .gform_page .gform_page_fields .gfield.gfield_price .ginput_container.ginput_container_radio .gfield_radio {
