--- a/style.scss
+++ b/style.scss
@@ -206,7 +206,7 @@ label {
 }
 
 #gform_2 {
-  font-family: bicyclette;
+  font-family: "bicyclette", sans-serif;
   .gform_body.gform-body .gform_page .gform_page_fields .gfield.gfield_price {
     .ginput_container.ginput_container_radio .gfield_radio {
       display: grid;
