--- a/style.scss
+++ b/style.scss
@@ -215,8 +215,8 @@ label {
         padding: 0.5rem 1rem;
         border: 2px solid var(--wp--preset--color--primary);
         margin: 0.5rem;
-        .gfield-choice-input {
-          //display: none;
+        input[type=radio]:checked+label{
+          font-weight:700;
         }
         .label {
           width: 100%;
