--- a/style.scss
+++ b/style.scss
@@ -212,17 +212,22 @@ label {
       display: grid;
       grid-template-columns: 1fr 1fr 1fr;
       div {
-        padding: 0.5rem 1rem;
+        
         border: 2px solid var(--wp--preset--color--primary);
         margin: 0.5rem;
         input{
           display:none;
         &[type=radio]:checked+label{
           font-weight:700;
+          background-color:var(--wp--preset--color--primary);
+          color:#fff;
         }}
         .label {
+          max-width: 100%;
+          padding: 0.5rem 1rem;
+          text-align: center;
+          margin: auto;
           width: 100%;
-          height: 100%;
         }
       }
     }
