--- a/style.css
+++ b/style.css
@@ -202,6 +202,9 @@ label {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   border: 2px solid var(--wp--preset--color--primary);
   margin: 0.5rem;
 }
@@ -217,7 +220,7 @@ label {
 }
 
 #gform_2 .gform_body.gform-body .gform_page .gform_page_fields .gfield.gfield_price .ginput_container.ginput_container_radio .gfield_radio div input label {
-  max-width: 100%;
+  max-width: 100% !important;
   padding: 0.5rem 1rem;
   text-align: center;
   margin: auto;
@@ -225,7 +228,6 @@ label {
   margin-bottom: 0;
   max-width: calc(100% - 32px);
   vertical-align: middle;
-  max-width: 100%;
   padding: .5rem;
 }
 /*# sourceMappingURL=style.css.map */
