--- a/style.scss
+++ b/style.scss
@@ -213,6 +213,7 @@ label {
       grid-template-columns: 1fr 1fr 1fr;
       div {
         display:flex;
+        justify-content: center;
         border: 2px solid var(--wp--preset--color--primary);
         margin: 0.5rem;
         input{
@@ -224,7 +225,7 @@ label {
           }
         
         label{
-          max-width: 100%;
+          max-width: 100% !important;
           padding: 0.5rem 1rem;
           text-align: center;
           margin: auto;
@@ -232,7 +233,6 @@ label {
           margin-bottom: 0;
           max-width: calc(100% - 32px);
           vertical-align: middle;
-          max-width: 100%;
           padding: .5rem;
         }
       }}
