--- a/style.css
+++ b/style.css
@@ -219,14 +219,15 @@ label {
   color: #fff;
 }
 
-#gform_2 .gform_body.gform-body .gform_page .gform_page_fields .gfield.gfield_price .ginput_container.ginput_container_radio .gfield_radio div input label {
+#gform_2 .gform_body.gform-body .gform_page .gform_page_fields .gfield.gfield_price .ginput_container.ginput_container_radio .gfield_radio div label {
   max-width: 100% !important;
   padding: 0.5rem 1rem;
   text-align: center;
   margin: auto;
-  width: 100%;
+  width: 100% !important;
   margin-bottom: 0;
   vertical-align: middle;
   padding: .5rem;
+  text-align: center;
 }
 /*# sourceMappingURL=style.css.map */
