--- a/style.scss
+++ b/style.scss
@@ -223,18 +223,21 @@ label {
             background-color:var(--wp--preset--color--primary);
             color:#fff;
           }
-        
+        }
         label{
           max-width: 100% !important;
           padding: 0.5rem 1rem;
           text-align: center;
           margin: auto;
-          width: 100%;
+          width: 100% !important;
           margin-bottom: 0;
           vertical-align: middle;
           padding: .5rem;
+
+          text-align: center;
         }
-      }}
+        
+      }
     }
   }
 }
