--- a/style.scss
+++ b/style.scss
@@ -240,4 +240,15 @@ label {
       }
     }
   }
+  .gform_page_footer .gform_next_button{
+    background-color: #fff;
+    border: 3px solid var(--wp--preset--color--primary);
+    padding: .5rem 1rem;
+    color: var(--wp--preset--color--primary);
+    font-weight: 700;
+    &:hover, &:focus{
+      background-color: var(--wp--preset--color--primary);
+      color: #fff;
+    }
+  }
 }
