--- a/style.css
+++ b/style.css
@@ -231,7 +231,7 @@ label {
   text-align: center;
 }
 
-#gform_2 .gform_page_footer .gform_next_button {
+#gform_2 .gform_page_footer button {
   background-color: #fff;
   border: 3px solid var(--wp--preset--color--primary);
   padding: .5rem 1rem;
@@ -239,7 +239,7 @@ label {
   font-weight: 700;
 }
 
-#gform_2 .gform_page_footer .gform_next_button:hover, #gform_2 .gform_page_footer .gform_next_button:focus {
+#gform_2 .gform_page_footer button:hover, #gform_2 .gform_page_footer button:focus {
   background-color: var(--wp--preset--color--primary);
   color: #fff;
 }
