--- a/style.scss
+++ b/style.scss
@@ -240,7 +240,7 @@ label {
       }
     }
   }
-  .gform_page_footer .gform_next_button{
+  .gform_page_footer button{
     background-color: #fff;
     border: 3px solid var(--wp--preset--color--primary);
     padding: .5rem 1rem;
