--- a/style.scss
+++ b/style.scss
@@ -240,15 +240,17 @@ label {
       }
     }
   }
-  .gform_page_footer button{
-    background-color: #fff;
-    border: 3px solid var(--wp--preset--color--primary);
-    padding: .5rem 1rem;
-    color: var(--wp--preset--color--primary);
-    font-weight: 700;
-    &:hover, &:focus{
-      background-color: var(--wp--preset--color--primary);
-      color: #fff;
+  .gform_page_footer{
+    input{
+      background-color: #fff;
+      border: 3px solid var(--wp--preset--color--primary);
+      padding: .5rem 1rem;
+      color: var(--wp--preset--color--primary);
+      font-weight: 700;
+      &:hover, &:focus{
+        background-color: var(--wp--preset--color--primary);
+        color: #fff;
+      }
     }
   }
 }
