--- a/style.css
+++ b/style.css
@@ -213,7 +213,7 @@ label {
   display: none;
 }
 
-#gform_2 .gform_body.gform-body .gform_page .gform_page_fields .gfield.gfield_price .ginput_container.ginput_container_radio .gfield_radio div input[type=radio]:checked + label {
+#gform_2 .gform_body.gform-body .gform_page .gform_page_fields .gfield.gfield_price .ginput_container.ginput_container_radio .gfield_radio div input[type=radio]:checked + label, #gform_2 .gform_body.gform-body .gform_page .gform_page_fields .gfield.gfield_price .ginput_container.ginput_container_radio .gfield_radio div input:hover {
   font-weight: 700;
   background-color: var(--wp--preset--color--primary);
   color: #fff;
